infra/k8s/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: expiration-redis-depl 
spec:
  replicas: 1
  selector: # to tell deployment (above) how to find all the pods that it's going to create 
    matchLabels: 
      app: expiration-redis  
  template: # how to create each individual pods that the deployment is going to create    
    metadata:
      labels:
        app: expiration-redis # this matched withthe above matchLabels array?
    spec:
      containers:
        - name: expiration-redis # this name is important just for logging purposes
          image: redis  # this image come grom docker hub

---
# creating a clusterIp service (object) not a microservice
apiVersion: v1 
kind: Service
metadata: 
  name: expiration-redis-srv
spec: 
  selector: 
    app: expiration-redis
  ports: 
    - name: db # just for logging puposes if you want to print information about this service
      protocol: TCP
      port: 6379 
      targetPort: 6379
