infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats  
  template: 
    metadata: 
      labels:
        app: nats
    spec:
      containers:
        - name: nats # we are gonna be running one container 
          image: nats-streaming:0.17.0   
          args: [
            '-p',
            '4222',
            '-m',
            '8222',
            '-hbi',  # nats streaming server send some heartbeats to know if the client connection is health or not
            '5s',
            '-hbt', # how long each client have to respond
            '5s',
            '-hbf', # the number of time each client can fail before nats streaming server is gonna assume that that connection is dead and gone
            '2',
            '-SD',
            '-cid', # clusterId ( key )
            'ticketing', # name of the clusterId ( value )

          ]
---
apiVersion: v1 
kind: Service
metadata: 
  name: nats-srv
spec:
  selector:
    app: nats
  ports: 
    - name: client
      protocol: TCP
      port: 4222 
      targetPort: 4222
    - name: monitoring
      protocol: TCP  
      port: 8222
      targetPort: 8222
